# Lorenz-Attractor

./: .gitignore  README.md  environment.yml  linspace_module.f90  linspace_module.mod  lorenz_attractor.f90  lorenz_visualization.py  pixi.toml  pyproject.toml
