[project]
name = "lorenz-attractor"
version = "0.1.0"
authors = [{ name = "Henry Cuzco", email = "40706933+uiucmeche1317@users.noreply.github.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge", "main", "r", "msys2"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
appnope = { version = "==0.1.4", build = "pyhd8ed1ab_1" }
asttokens = { version = "==3.0.0", build = "pyhd8ed1ab_1" }
brotli = { version = "==1.1.0", build = "hd74edd7_2" }
brotli-bin = { version = "==1.1.0", build = "hd74edd7_2" }
bzip2 = { version = "==1.0.8", build = "h99b78c6_7" }
ca-certificates = { version = "==2025.1.31", build = "hf0a4a13_0" }
comm = { version = "==0.2.2", build = "pyhd8ed1ab_1" }
contourpy = { version = "==1.3.1", build = "py313h0ebd0e5_0" }
cycler = { version = "==0.12.1", build = "pyhd8ed1ab_1" }
debugpy = { version = "==1.8.13", build = "py313h928ef07_0" }
decorator = { version = "==5.2.1", build = "pyhd8ed1ab_0" }
exceptiongroup = { version = "==1.2.2", build = "pyhd8ed1ab_1" }
executing = { version = "==2.1.0", build = "pyhd8ed1ab_1" }
fonttools = { version = "==4.56.0", build = "py313ha9b7d5b_0" }
freetype = { version = "==2.13.3", build = "h1d14073_0" }
importlib-metadata = { version = "==8.6.1", build = "pyha770c72_0" }
ipykernel = { version = "==6.29.5", build = "pyh57ce528_0" }
ipython = { version = "==9.0.2", build = "pyhfb0248b_0" }
ipython_pygments_lexers = { version = "==1.1.1", build = "pyhd8ed1ab_0" }
jedi = { version = "==0.19.2", build = "pyhd8ed1ab_1" }
jupyter_client = { version = "==8.6.3", build = "pyhd8ed1ab_1" }
jupyter_core = { version = "==5.7.2", build = "pyh31011fe_1" }
kiwisolver = { version = "==1.4.7", build = "py313hf9c7212_0" }
krb5 = { version = "==1.21.3", build = "h237132a_0" }
lcms2 = { version = "==2.17", build = "h7eeda09_0" }
lerc = { version = "==4.0.0", build = "h9a09cb3_0" }
libblas = { version = "==3.9.0", build = "31_h10e41b3_openblas" }
libbrotlicommon = { version = "==1.1.0", build = "hd74edd7_2" }
libbrotlidec = { version = "==1.1.0", build = "hd74edd7_2" }
libbrotlienc = { version = "==1.1.0", build = "hd74edd7_2" }
libcblas = { version = "==3.9.0", build = "31_hb3479ef_openblas" }
libcxx = { version = "==20.1.1", build = "ha82da77_0" }
libdeflate = { version = "==1.23", build = "hec38601_0" }
libedit = { version = "==3.1.20250104", build = "pl5321hafb1f1b_0" }
libexpat = { version = "==2.6.4", build = "h286801f_0" }
libffi = { version = "==3.4.2", build = "h3422bc3_5" }
libgfortran = { version = "==5.0.0", build = "14_2_0_h6c33f7e_1" }
libgfortran5 = { version = "==14.2.0", build = "h6c33f7e_1" }
libjpeg-turbo = { version = "==3.0.0", build = "hb547adb_1" }
liblapack = { version = "==3.9.0", build = "31_hc9a63f6_openblas" }
liblzma = { version = "==5.6.4", build = "h39f12f2_0" }
libmpdec = { version = "==4.0.0", build = "h99b78c6_0" }
libopenblas = { version = "==0.3.29", build = "openmp_hf332438_0" }
libpng = { version = "==1.6.47", build = "h3783ad8_0" }
libsodium = { version = "==1.0.20", build = "h99b78c6_0" }
libsqlite = { version = "==3.49.1", build = "h3f77e49_2" }
libtiff = { version = "==4.7.0", build = "h551f018_3" }
libwebp-base = { version = "==1.5.0", build = "h2471fea_0" }
libxcb = { version = "==1.17.0", build = "hdb1d25a_0" }
libzlib = { version = "==1.3.1", build = "h8359307_2" }
llvm-openmp = { version = "==20.1.1", build = "hdb05f8b_1" }
matplotlib = { version = "==3.10.1", build = "py313h39782a4_0" }
matplotlib-base = { version = "==3.10.1", build = "py313haaf02c0_0" }
matplotlib-inline = { version = "==0.1.7", build = "pyhd8ed1ab_1" }
munkres = { version = "==1.1.4", build = "pyh9f0ad1d_0" }
ncurses = { version = "==6.5", build = "h5e97a16_3" }
nest-asyncio = { version = "==1.6.0", build = "pyhd8ed1ab_1" }
numpy = { version = "==2.2.4", build = "py313h41a2e72_0" }
openjpeg = { version = "==2.5.3", build = "h8a3d83b_0" }
openssl = { version = "==3.4.1", build = "h81ee809_0" }
packaging = { version = "==24.2", build = "pyhd8ed1ab_2" }
parso = { version = "==0.8.4", build = "pyhd8ed1ab_1" }
pexpect = { version = "==4.9.0", build = "pyhd8ed1ab_1" }
pickleshare = { version = "==0.7.5", build = "pyhd8ed1ab_1004" }
pillow = { version = "==11.1.0", build = "py313hb37fac4_0" }
pip = { version = "==25.0.1", build = "pyh145f28c_0" }
platformdirs = { version = "==4.3.7", build = "pyh29332c3_0" }
prompt-toolkit = { version = "==3.0.50", build = "pyha770c72_0" }
psutil = { version = "==7.0.0", build = "py313h90d716c_0" }
pthread-stubs = { version = "==0.4", build = "hd74edd7_1002" }
ptyprocess = { version = "==0.7.0", build = "pyhd8ed1ab_1" }
pure_eval = { version = "==0.2.3", build = "pyhd8ed1ab_1" }
pygments = { version = "==2.19.1", build = "pyhd8ed1ab_0" }
pyparsing = { version = "==3.2.3", build = "pyhd8ed1ab_1" }
python = { version = "==3.13.2", build = "h81fe080_101_cp313" }
python-dateutil = { version = "==2.9.0.post0", build = "pyhff2d567_1" }
python_abi = { version = "==3.13", build = "5_cp313" }
pyzmq = { version = "==26.3.0", build = "py313he6960b1_0" }
qhull = { version = "==2020.2", build = "h420ef59_5" }
readline = { version = "==8.2", build = "h1d1bf99_2" }
scipy = { version = "==1.15.2", build = "py313h9a24e0a_0" }
six = { version = "==1.17.0", build = "pyhd8ed1ab_0" }
stack_data = { version = "==0.6.3", build = "pyhd8ed1ab_1" }
tk = { version = "==8.6.13", build = "h5083fa2_1" }
tornado = { version = "==6.4.2", build = "py313h90d716c_0" }
traitlets = { version = "==5.14.3", build = "pyhd8ed1ab_1" }
typing_extensions = { version = "==4.13.0", build = "pyh29332c3_1" }
tzdata = { version = "==2025b", build = "h78e105d_0" }
wcwidth = { version = "==0.2.13", build = "pyhd8ed1ab_1" }
xorg-libxau = { version = "==1.0.12", build = "h5505292_0" }
xorg-libxdmcp = { version = "==1.1.5", build = "hd74edd7_0" }
zeromq = { version = "==4.3.5", build = "hc1bb282_7" }
zipp = { version = "==3.21.0", build = "pyhd8ed1ab_1" }
zstd = { version = "==1.5.7", build = "h6491c7d_2" }
